--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -1,9 +1,25 @@
-<form action="/authentication/sign-up" method="POST">
+<form action="/authentication/sign-up" method="POST" enctype="multipart/form-data">
   <label for="input-name">Name</label>
-  <input type="text" id="input-name" name="name" placeholder="Your Name" />
+  <input type="text" id="input-name" name="name" placeholder="Your Name" required />
+
   <label for="input-email">Email</label>
-  <input type="email" id="input-email" name="email" placeholder="Your Email" />
+  <input type="email" id="input-email" name="email" placeholder="Your Email" required/>
+
+ {{!-- Make one of the radio inputs required. If full time - true value to be sent --}}
+  <label for="input-full-time">
+     <input type="radio" id="input-full-time" name="fullTime" value="true" required/>
+     Full time
+  </label>
+
+  <label for="input-part-time">
+    <input type="radio" id="input-part-time" name="fullTime" value="false"/>
+    Part time
+  </label>
+
+  <label for="profilePicture">Profile picture</label>
+  <input type="file" name="profilePicture" id="profilePicture">
+
   <label for="input-password">Password</label>
-  <input type="password" name="password" id="input-password" placeholder="A Strong Password" />
+  <input type="password" name="password" id="input-password" placeholder="A Strong Password" required/>
   <button>Sign Up</button>
 </form>
