--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -16,8 +16,11 @@
     Part time
   </label>
 
+  <label for="start">Bootcamp date</label>
+  <input type="date" id="startDate" name="startDate" value="" min="2018-01-01" max="2022-12-31" required>
+
   <label for="profilePicture">Profile picture</label>
-  <input type="file" name="profilePicture" id="profilePicture">
+  <input type="file" name="profilePicture" id="profilePicture" accept="image/jpeg, image/png">
 
   <label for="input-password">Password</label>
   <input type="password" name="password" id="input-password" placeholder="A Strong Password" required/>
