added create but still without file upload

--- a/views/flashcards/create.hbs
+++ b/views/flashcards/create.hbs
@@ -1,37 +1,37 @@
 <h1>Create a flashcard</h1>
 
-<form method="POST" enctype="multipart/form-data">
+<form method="POST" >
   <label for="question-title">Title</label>
   <input type="text" id="question-title" name="title" placeholder="Title" required/>
 
-  <label for="question-description">URL</label>
+  <label for="question-description">Description:</label>
   <input type="text" id="question-description" name="description" placeholder="Add more detail..." />
-
+{{!-- 
   <label for="question-image">Upload an image to illustrate your question: </label>
-  <input type="file" id="question-image" name="questionImage" accept="image/png, image/jpeg">
+  <input type="file" id="question-image" name="questionImage" accept="image/png, image/jpeg"> --}}
 
 
-  <label for="solution">URL</label>
+  <label for="solution">Solution:</label>
   <input type="text" id="solution" name="solution" placeholder="And the solution..." required/>
-
+{{!-- 
 
   <label for="solution-image">Upload an image to illustrate the solution: </label>
   <input type="file" id="solution-image" name="solutionImage" accept="image/png, image/jpeg">
-
+ --}}
 
   <label for="topic">Main Topic: </label>
   <select name="topic" id="question-topic" required>
     <option value="" selected disabled>Topic</option> <!-- Display empty placeholder value-->
-    <option value="Javascript - Syntax">Book</option>
-    <option value="Javascript - Basic Logic">Video</option>
-    <option value="Javascript - Object Oriented Programming">Article</option>
-    <option value="HTML">Blog</option>
-    <option value="Node">Tweet</option>
-    <option value="Node - Express">Podcast</option>
-    <option value="MongoDB - Queries">Course</option>
-    <option value="Deployment">Course</option>
-    <option value="Templating">Course</option>
-    <option value="GIT">Course</option>
+    <option value="Javascript - Syntax">Javascript - Syntax</option>
+    <option value="Javascript - Basic Logic">Javascript - Basic Logic</option>
+    <option value="Javascript - Object Oriented Programming">Javascript - Object Oriented Programming</option>
+    <option value="HTML">HTML</option>
+    <option value="Node">Node</option>
+    <option value="Node - Express">Node - Express</option>
+    <option value="MongoDB - Queries">MongoDB - Queries</option>
+    <option value="Deployment">Deployment</option>
+    <option value="Templating">Templating</option>
+    <option value="GIT">GIT</option>
   </select>
 
 
@@ -48,5 +48,5 @@
   <label for="question-difficulty">Rate the difficulty of your quetstion on a scale of 1 through 10: </label>
   <input type="range" min="1" max="10" step="1" id="question-difficulty" name="difficulty"  required>
 
-  <button>Submit</button>
+  <button type="submit">Submit</button>
 </form>
