--- a/views/flashcards/update.hbs
+++ b/views/flashcards/update.hbs
@@ -1,18 +1,19 @@
-<h1>Create a flashcard</h1>
+<h1>Edit flashcard</h1>
 
 <form method="POST" enctype="multipart/form-data">
   <label for="question-title">Title</label>
-  <input type="text" id="question-title" name="title" placeholder="Title" required/>
+  <input type="text" id="question-title" name="title" placeholder="Title" value="{{flashcard.questionTitle}}" required/>
 
   <label for="question-description">Description:</label>
-  <input type="text" id="question-description" name="description" placeholder="Add more detail..." />
+  <input type="text" id="question-description" name="description" placeholder="Add more detail..." value="{{flashcard.questionDescription}}" />
  
+ {{!-- how to set value to already uploaded picture?? --}}
   <label for="question-image">Upload an image to illustrate your question: </label>
   <input type="file" id="question-image" name="questionImage" accept="image/png, image/jpeg"> 
 
 
   <label for="solution">Solution:</label>
-  <input type="text" id="solution" name="solution" placeholder="And the solution..." required/>
+  <input type="text" id="solution" name="solution" placeholder="And the solution..." value="{{flashcard.solution}}" required/>
 
 
   <label for="solution-image">Upload an image to illustrate the solution: </label>
@@ -46,7 +47,7 @@
           
 
   <label for="question-difficulty">Rate the difficulty of your quetstion on a scale of 1 through 10: </label>
-  <input type="range" min="1" max="10" step="1" id="question-difficulty" name="difficulty"  required>
+  <input type="range" min="1" max="10" step="1" id="question-difficulty" name="difficulty" value="{{flashcard.difficulty}}"  required>
 
   <button type="submit">Submit</button>
 </form>
