created choicecard model and routes and views. Trying out funcitonality

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,7 @@
       {{#if user}}
         <a href="/private">{{user.name}}'s Profile</a>
         <a href="/flashcard/create">Create a new Flashcard</a>
+        <a href="/choicecard/create">Create a new Choicecard</a>
 
         <form action="/authentication/sign-out" method="POST">
           <button>Sign Out</button>
