added random and browse function

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,2 +1,5 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<button><a href="/random">Show a Random Card</a></button>
+<button><a href="/browse">Browse Cards</a></button>
+
