--- a/views/flashcards/single.hbs
+++ b/views/flashcards/single.hbs
@@ -14,18 +14,26 @@
 <p><img src="{{flashcard.solutionImage}}" alt="oops there was a problem loading the image" width="100" height="300" ></p>
 {{/if}}
 </div>
+
+
 {{!-- <div>{{#each comments}}
     <p>{{this}}</p>
     {{/each}}
 </div> --}}
 
+
+
 {{#if user}}
 <form action="/flashcard/{{flashcard._id}}/upvote" method="POST"><button>Upvote!</button></form>
 <form action="/flashcard/{{flashcard._id}}/errorvote" method="POST"><button>Flag an Error!</button></form>
-{{!-- check if user is creater of this flashcard. only then show delete and edit button --}}
 
+<p>{{user._id}} {{flashcard.creator._id}}</p>
+
+{{!-- check if user is creater of this flashcard. only then show delete and edit button --}}
+{{#equal user._id flashcard.creator._id}}
 <button><a href="/flashcard/{{flashcard._id}}/delete">Delete this flashcard</a></button>
 <button><a href="/flashcard/{{flashcard._id}}/update">Edit this flashcard</a></button>
+{{/equal}}
 
 {{/if}}
 
