--- a/views/partials/comments.hbs
+++ b/views/partials/comments.hbs
@@ -1,5 +1,13 @@
-<form action="/new-comment" method="POST">
-    <label for="input-comment">Comment</label>
-    <input type="text" id="input-comment" name="comment" placeholder="Leave a comment here!" maxlength="140">
 
+<form action="" method="POST">
+        <label for="input-comment"></label>
+        <input type="text" id="input-comment" name="comment" placeholder="Leave a comment here!" maxlength="140">
+        <button>
+        Enter comment
+        </button>
 </form>
+<div>
+{{flashcard}}
+{{user}}
+
+</div>
