small refactor in app.js

--- a/views/flashcards/single.hbs
+++ b/views/flashcards/single.hbs
@@ -35,13 +35,7 @@
 {{/if}}
 
 {{/if}}
-
-
-<form action="/flashcard/{{flashcard._id}}/new-comment" method="POST">
-    <input type="text" id="input-comment" name="comment" placeholder="Leave a comment here!" maxlength="140" required>
-    <button>Submit comment</button>
-</form>
-
+{{> comments}}
 
 <script>
     const answer = document.getElementById('displayAnswer')
