--- a/views/partials/comments.hbs
+++ b/views/partials/comments.hbs
@@ -1,13 +1,5 @@
 
-<form action="" method="POST">
-        <label for="input-comment"></label>
-        <input type="text" id="input-comment" name="comment" placeholder="Leave a comment here!" maxlength="140">
-        <button>
-        Enter comment
-        </button>
+<form action="/flashcard/{{flashcard._id}}/new-comment" method="POST">
+    <input type="text" id="input-comment" name="comment" placeholder="Leave a comment here!" maxlength="140" required>
+    <button>Submit comment</button>
 </form>
-<div>
-{{flashcard}}
-{{user}}
-
-</div>
