--- a/views/choicecards/feedback.hbs
+++ b/views/choicecards/feedback.hbs
@@ -1,5 +1,5 @@
 <h1>{{feedbackMsg}}</h1>
 {{!-- to do -> redirect to /choicecard/random --}}
-<button>next</button>
+<button><a href="/randomchoicecard">Next</a></button>
 <button><a href="/choicecard/{{id}}">
-try again</a></button>
+Try again</a></button>
