--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,13 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<button><a href="/random">Show a Random Card</a></button>
-<button><a href="/browse">Browse Cards</a></button>
+<div id="welcome">
+    <h1 id="homeTitle">{{title}}</h1>
+<p id="homeSubtitle">Welcome to {{title}}</p>
+</div>
+
+<div id="homeButtons">
+<button><a href="/randomflashcard">Random Flashcard</a></button>
+<button><a href="/browsefalshcards">Browse Flashcards</a></button>
+<button><a href="/randomchoicecard">Random Choicecard</a></button>
+<button><a href="/browsechoicecards">Browse Choicecards</a></button>
+</div>
+
 
