--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,8 +11,8 @@
       <a href="/">Home</a>
       {{#if user}}
         <a href="/private">{{user.name}}'s Profile</a>
-        <a href="/flashcard/create">Create a new Flashcard</a>
-        <a href="/choicecard/create">Create a new Choicecard</a>
+        <a href="/flashcard/create">New Flashcard</a>
+        <a href="/choicecard/create">New Choicecard</a>
 
         <form action="/authentication/sign-out" method="POST">
           <button>Sign Out</button>
