--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,62 +1,67 @@
-$font-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+@import 'card';
+@import 'feedback';
+@import 'home';
+$font-sans: 'Helvetica Neue',
+Helvetica,
+Arial,
+sans-serif;
 $grey: hsl(0, 0, 90%);
-
 * {
-  &,
-  &:before,
-  &:after {
-    box-sizing: border-box;
-  }
+    &,
+    &:before,
+    &:after {
+        box-sizing: border-box;
+    }
 }
 
 body {
-  max-width: 52em;
-  padding: 0 1em;
-  margin: 0 auto;
-  font-family: sans-serif;
-  font-family: $font-sans;
-  line-height: 2;
+    max-width: 52em;
+    padding: 0 1em;
+    margin: 0 auto;
+    font-family: sans-serif;
+    font-family: $font-sans;
+    line-height: 2;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 nav {
-  display: flex;
-  a,
-  button {
-    padding: 1em 0;
-    border: 0;
-    &:not(:last-child) {
-      margin-right: 1em;
+    display: flex;
+    a,
+    button {
+        padding: 1em 0;
+        border: 0;
+        &:not(:last-child) {
+            margin-right: 1em;
+        }
+        &:first-child {
+            margin-right: auto;
+        }
     }
-    &:first-child {
-      margin-right: auto;
-    }
-  }
 }
 
 h1,
 h2,
 h3,
 p {
-  margin: 0;
-  line-height: inherit;
-  &:not(:last-child) {
-    margin-bottom: 1rem;
-  }
+    margin: 0;
+    line-height: inherit;
+    &:not(:last-child) {
+        margin-bottom: 1rem;
+    }
 }
 
 img {
-  width: 100%;
-  max-width: 100%;
+    width: 100%;
+    max-width: 100%;
 }
 
 form {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 input:not([type='checkbox']),
@@ -66,20 +71,20 @@ textarea,
 select,
 button,
 .btn {
-  padding: 1em;
-  border: 1px solid $grey;
-  border-radius: 0;
-  margin-bottom: 1em;
-  font: inherit;
-  color: inherit;
-  background-color: transparent;
+    padding: 1em;
+    border: 1px solid $grey;
+    border-radius: 0;
+    margin-bottom: 1em;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
 }
 
 textarea {
-  min-height: 8em;
-  resize: vertical;
+    min-height: 8em;
+    resize: vertical;
 }
 
 label {
-  margin-bottom: 0.5em;
+    margin-bottom: 0.5em;
 }
