removed flashcards logic

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,6 @@
-@import 'card';
-@import 'feedback';
-@import 'home';
+// @import 'card';
+// @import 'feedback';
+// @import 'home';
 $font-sans: 'Helvetica Neue',
 Helvetica,
 Arial,
