--- a/views/choicecards/single.hbs
+++ b/views/choicecards/single.hbs
@@ -44,6 +44,8 @@
 
 {{/if}}
 
+{{> comments}}
+
 <script>
     const check= document.getElementById('checkAnswer')
     check.addEventListener('click' , (event) => {
