--- a/views/partials/comments.hbs
+++ b/views/partials/comments.hbs
@@ -1,5 +1,5 @@
 
-<form action="/flashcard/{{flashcard._id}}/new-comment" method="POST">
+<form action="/choicecard/{{choicecard._id}}/new-comment" method="POST">
     <input type="text" id="input-comment" name="comment" placeholder="Leave a comment here!" maxlength="140" required>
     <button>Submit comment</button>
 </form>
