fixed error display issues and card display issues

--- a/views/choicecards/single.hbs
+++ b/views/choicecards/single.hbs
@@ -32,7 +32,9 @@
            name="answer" value="{{choicecard.answers.[3].correct}}">
          <label for="answer4">{{choicecard.answers.[3].message}}</label>
     </p>
+    {{#if user}}
     <button id="checkAnswer">Check Answer</button>
+    {{/if}}
 </form>
 
 </div>
