added some more styling and implemented answer shuffling

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -118,6 +118,61 @@
   box-shadow: -1px 1px 1px 1px lightgray;
 }
 
+#createCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: -2px 2px 2px 2px lightgray;
+  margin: 2em;
+  padding: 1em;
+  font-weight: 500;
+}
+
+#createCard h1 {
+  margin: 1em;
+  background-color: #c5f8da;
+  padding: 1em;
+}
+
+#createCard div {
+  padding: 1em;
+  border: 1px solid gray;
+  margin: 2em;
+}
+
+#createCard input {
+  width: 30em;
+  padding: 0.5em;
+}
+
+#createCard label {
+  font-weight: 700;
+}
+
+#createCard p {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: baseline;
+  text-align: center;
+}
+
+#createCard h4 {
+  text-align: center;
+  background-color: #e7a6a6;
+}
+
+#createCard #metaInput {
+  font-size: 0.9em;
+}
+
+#createCard button {
+  padding: 0.5em;
+  font-weight: 700;
+  background-color: #d5f2f3;
+  box-shadow: -1px 1px 1px 1px lightgray;
+}
+
 nav {
   font-weight: 700;
   border-bottom: 1px solid darkslategrey;
