--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,221 +1,64 @@
-#browse {
-    margin-top: 2em;
-    padding-bottom: 1em;
-    text-align: center;
-    border-bottom: 1px solid #e6e6e6;
-}
-
-#browse h2 {
-    padding: 1em;
-    font-size: 2em;
-}
-
-#browse form {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: baseline;
-}
-
-#browse form select {
-    max-width: fit-content;
-}
-
-#browse form button {
-    max-width: fit-content;
-    background-color: #e6e6e6;
-    padding: 0.2em 0.3em;
-    font-weight: 700;
-    border: 1px solid black;
-}
-
-#displayFlashcards {
-    margin-top: 2em;
-    text-align: center;
-}
-
-#displayFlashcards h4 {
-    font-size: 1.5em;
-    padding: 1em;
-}
-
-#displayFlashcards button {
-    max-width: fit-content;
-    background-color: #9bafc4;
-    padding: 0.4em 0.5em;
-    margin: 0.2em;
-    font-weight: 700;
-    border: 1px solid black;
-}
-
-#card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: -2px 2px 2px 2px lightgray;
-    margin: 2em;
-    padding: 1em;
-}
-
-#card h1 {
-    padding: 2em;
-}
-
-#card small #topic {
-    font-weight: 700;
-    background-color: #b99e9e;
-}
-
-#card small span {
-    padding: 0.5em 1em;
-    background-color: #b6b6b6;
-}
-
-#selectAnswer {
-    box-shadow: -2px 2px 2px 2px lightgray;
-    margin: 2em;
-    padding: 1em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 1.3em;
-}
-
-#selectAnswer form {
-    display: flex;
-}
-
-#selectAnswer form p {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-    padding: 0 2em;
-    border: 1px solid #cccccc;
-}
-
-#selectAnswer form p input {
-    margin: 1em 2em 0 0;
-}
-
-#selectAnswer button {
-    padding: 0.5em;
-    font-weight: 700;
-    background-color: #d5f2f3;
-    box-shadow: -1px 1px 1px 1px lightgray;
-}
-
-#editButtons {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#editButtons button {
-    padding: 0.5em;
-    margin: 1em;
-    font-weight: 700;
-    background-color: #f8efc4;
-    box-shadow: -1px 1px 1px 1px lightgray;
-}
-
-nav {
-    font-weight: 700;
-    border-bottom: 1px solid darkslategrey;
-}
-
-#welcome {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-#homeTitle {
-    font-size: 3.5em;
-    text-transform: uppercase;
-    padding: 2em;
-}
-
-#homeSubtitle {
-    padding-bottom: 2em;
-    font-size: 2em;
-}
-
-#homeButtons {
-    display: flex;
-    justify-content: space-between;
-}
-
-#homeButtons button {
-    padding: 0.3em;
-    font-weight: 700;
-    background-color: #e6e6e6;
-    border: 1px solid black;
-}
-
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
+*, *:before, *:after {
+  box-sizing: border-box;
 }
 
 body {
-    max-width: 52em;
-    padding: 0 1em;
-    margin: 0 auto;
-    font-family: sans-serif;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    line-height: 2;
+  max-width: 52em;
+  padding: 0 1em;
+  margin: 0 auto;
+  font-family: sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 2;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 nav {
-    display: flex;
+  display: flex;
 }
 
 nav a,
 nav button {
-    padding: 1em 0;
-    border: 0;
+  padding: 1em 0;
+  border: 0;
 }
 
 nav a:not(:last-child),
 nav button:not(:last-child) {
-    margin-right: 1em;
+  margin-right: 1em;
 }
 
 nav a:first-child,
 nav button:first-child {
-    margin-right: auto;
+  margin-right: auto;
 }
 
 h1,
 h2,
 h3,
 p {
-    margin: 0;
-    line-height: inherit;
+  margin: 0;
+  line-height: inherit;
 }
 
 h1:not(:last-child),
 h2:not(:last-child),
 h3:not(:last-child),
 p:not(:last-child) {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 img {
-    width: 100%;
-    max-width: 100%;
+  width: 100%;
+  max-width: 100%;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 input:not([type='checkbox']),
@@ -225,23 +68,22 @@ textarea,
 select,
 button,
 .btn {
-    padding: 1em;
-    border: 1px solid #e6e6e6;
-    border-radius: 0;
-    margin-bottom: 1em;
-    font: inherit;
-    color: inherit;
-    background-color: transparent;
+  padding: 1em;
+  border: 1px solid #e6e6e6;
+  border-radius: 0;
+  margin-bottom: 1em;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
 }
 
 textarea {
-    min-height: 8em;
-    resize: vertical;
+  min-height: 8em;
+  resize: vertical;
 }
 
 label {
-    margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
-
 
 /*# sourceMappingURL=style.css.map */
