implemented nodemailer: errorflag and welcome email

--- a/views/choicecards/single.hbs
+++ b/views/choicecards/single.hbs
@@ -34,6 +34,8 @@
     </p>
     {{#if user}}
     <button id="checkAnswer">Check Answer</button>
+    {{else}}
+    <button><a href="/authentication/sign-in">Login to answer this card</a></button>
     {{/if}}
 </form>
 
