--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,10 +1,11 @@
 @import 'card';
 @import 'feedback';
 @import 'home';
-$font-sans: 'Helvetica Neue',
-Helvetica,
-Arial,
-sans-serif;
+@import 'profile';
+// $font-sans: 'Helvetica Neue',
+// Helvetica,
+// Arial,
+// sans-serif;
 $grey: hsl(0, 0, 90%);
 * {
     &,
@@ -18,8 +19,9 @@ body {
     max-width: 52em;
     padding: 0 1em;
     margin: 0 auto;
-    font-family: sans-serif;
-    font-family: $font-sans;
+    margin-bottom: 1em;
+    font-family: 'Lato', sans-serif; //font-family: sans-serif;
+    //font-family: $font-sans;
     line-height: 2;
 }
 
