--- a/views/choicecards/create.hbs
+++ b/views/choicecards/create.hbs
@@ -1,4 +1,4 @@
-<div id="createCard">
+<div class="createCard">
 <h1>Create a Choicecard</h1>
 
 <form method="POST" >
@@ -43,7 +43,7 @@
 
   
  
- <div id="metaInput">
+ <div class="metaInput">
 
    <p>
      <label for="topic">Main Topic: </label>
