--- a/views/choicecards/update.hbs
+++ b/views/choicecards/update.hbs
@@ -1,53 +1,48 @@
+<div class="createCard">
 <h1>Edit choicecard</h1>
 
 <form method="POST" enctype="multipart/form-data">
-  <label for="question-title">Title</label>
-  <input type="text" id="question-title" name="title" placeholder="Title" value="{{choicecard.questionTitle}}" required/>
+<div>
 
-  <label for="question-description">Description:</label>
-  <input type="text" id="question-description" name="description" placeholder="Add more detail..." value="{{choicecard.questionDescription}}" />
- 
- {{!-- how to set value to already uploaded picture?? --}}
-  <label for="question-image">Upload an image to illustrate your question: </label>
-  <input type="file" id="question-image" name="questionImage" accept="image/png, image/jpeg"> 
+    <p>
+    <label for="question-title">Title</label>
+    <input type="text" id="question-title" name="title" placeholder="Title" value="{{choicecard.questionTitle}}" required/>
+    </p>
+    <p>
+    <label for="question-description">Description:</label>
+    <input type="text" id="question-description" name="description" placeholder="Add more detail..." value="{{choicecard.questionDescription}}" />
+  </p>
+</div>
+  
+   
+<div>
+  <h4>Update Correct Answer</h4>
+  <p>
+   <label for="correctAnswer">Correct Answer:</label>
+  <input type="text" id="correctAnswer" name="correctAnswer" placeholder="The correct answer..." value="{{correctAnswer}}" required/>
+  </p>
 
-
-  <label for="solution">Solution:</label>
-  <input type="text" id="solution" name="solution" placeholder="And the solution..." value="{{choicecard.solution}}" required/>
-
-
-  <label for="solution-image">Upload an image to illustrate the solution: </label>
-  <input type="file" id="solution-image" name="solutionImage" accept="image/png, image/jpeg">
-
-
-  <label for="topic">Main Topic: </label>
-  <select name="topic" id="question-topic" required>
-    <option value="" selected disabled>Topic</option> <!-- Display empty placeholder value-->
-    <option value="Javascript - Syntax">Javascript - Syntax</option>
-    <option value="Javascript - Basic Logic">Javascript - Basic Logic</option>
-    <option value="Javascript - Object Oriented Programming">Javascript - Object Oriented Programming</option>
-    <option value="HTML">HTML</option>
-    <option value="Node">Node</option>
-    <option value="Node - Express">Node - Express</option>
-    <option value="MongoDB - Queries">MongoDB - Queries</option>
-    <option value="Deployment">Deployment</option>
-    <option value="Templating">Templating</option>
-    <option value="GIT">GIT</option>
-  </select>
-
-
-<label for="module">Question relates to Module...: </label>
-  <select name="module" id="module" required>
-    <option value="" selected disabled>Module</option> <!-- Display empty placeholder value-->
-    <option value="Module 1">Module 1</option>
-    <option value="Module 2">Module 2</option>
-    <option value="Module 3">Module 3</option>
-  </select>
+  <h4>Update Incorrect Answers:</h4>
+  <p>
+    <label for="answer2">Answer 2:</label>
+    <input type="text" id="answer2" name="answer2" placeholder="Second possible answer..." required/>
+  </p>
+  <p>
+     <label for="answer3">Answer 3:</label>
+      <input type="text" id="answer3" name="answer3" placeholder="Third possible answer..." required/>
+  </p>
+  <p>
+    <label for="answer4">Answer 4:</label>
+    <input type="text" id="answer4" name="answer4" placeholder="Fourth possible answer..." required/>  
+  </p>
+</div>
 
           
-
-  <label for="question-difficulty">Rate the difficulty of your quetstion on a scale of 1 through 10: </label>
+<div class="metaInput">
+<label for="question-difficulty">Difficulty on a scale of 1 through 10: </label>
   <input type="range" min="1" max="10" step="1" id="question-difficulty" name="difficulty" value="{{choicecard.difficulty}}"  required>
-
+</div>
+  
   <button type="submit">Submit</button>
 </form>
+</div>
