--- a/styles/card.scss
+++ b/styles/card.scss
@@ -107,7 +107,7 @@ $grey: hsl(0, 0, 90%);
     }
 }
 
-#createCard {
+.createCard {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -143,7 +143,7 @@ $grey: hsl(0, 0, 90%);
         text-align: center;
         background-color: rgb(231, 166, 166);
     }
-    #metaInput {
+    .metaInput {
         font-size: 0.9em;
     }
     button {
