--- a/views/private.hbs
+++ b/views/private.hbs
@@ -6,7 +6,7 @@
     </div>
     <div>
         <h4>Your Stats:</h4>
-        <p>Highscore overall - Correct Answer Streak: {{user.correctAnswerStreak}}</p>
+        <p>Highscore overall - Correct Answer Streak: {{user.highscore}}</p>
         <p>Highscore today - Correct Answer Streak: </p>
     </div>
     
