--- a/views/private.hbs
+++ b/views/private.hbs
@@ -7,7 +7,7 @@
     <div>
         <h4>Your Stats:</h4>
         <p>Highscore overall - Correct Answer Streak: {{user.highscore}}</p>
-        <p>Highscore today - Correct Answer Streak: </p>
+        <p>Current Correct Answer Streak:{{user.correctAnswerStreak}} </p>
     </div>
     
 </div>
