--- a/views/private.hbs
+++ b/views/private.hbs
@@ -4,7 +4,7 @@
     <h4>Bootcamp: {{#if user.fullTime}}Full Time{{else}}Part Time{{/if}}</h4>
 <img src="{{user.profilePicture}}" alt="awesome profile pic">
     </div>
-    <div>
+    <div id="stats">
         <h4>Your Stats:</h4>
         <p>Highscore overall - Correct Answer Streak: {{user.highscore}}</p>
         <p>Current Correct Answer Streak:{{user.correctAnswerStreak}} </p>
