--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -1,16 +1,24 @@
+$mustardYellow: #eecb89;
 #profileHeader {
     display: flex;
     align-items: center;
     margin-bottom: 2em;
+    letter-spacing: 2px;
     div {
         width: 50vw;
+        margin: 0 3em;
+    }
+    #stats {
+        margin-top: 8em;
     }
     h1 {
         margin-top: 1em;
-        font-size: 2.3em;
+        font-size: 3em;
+        font-weight: 400;
     }
     h4 {
         font-size: 1em;
+        font-weight: 500;
         padding: 0;
     }
     p {
@@ -23,11 +31,19 @@
     }
 }
 
+h4 {
+    font-size: 1em;
+    font-weight: 500;
+    padding: 0;
+}
+
 #createdCards {
-    border: 1px solid darkslategray;
     padding: 1em;
     display: flex;
     justify-content: space-evenly;
+    letter-spacing: 2px;
+    font-weight: 400;
+    background-color: $mustardYellow;
     #singleCard {
         margin-top: 1em;
         background-color: rgb(248, 238, 223);
@@ -37,6 +53,7 @@
         text-align: center;
     }
     h4 {
+        font-weight: 500;
         margin-bottom: 0;
     }
 }
