--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,3 @@
-@import 'card';
-@import 'feedback';
-@import 'home';
-@import 'profile';
 // $font-sans: 'Helvetica Neue',
 // Helvetica,
 // Arial,
@@ -26,7 +22,6 @@ body {
     margin: 0 auto;
     margin-bottom: 1em;
     font-family: 'Poppins', sans-serif;
-    max-width: 65em;
     line-height: 2;
 }
 
@@ -39,19 +34,25 @@ nav {
     display: flex;
     a,
     button {
-        background-color: #648381;
-        color: $pistachio;
         box-shadow: -2px 2px 2px 2px lightgrey;
         margin-top: 1em;
         margin-bottom: 0.5em;
+        max-width: none;
         padding: 0.2em;
         border: 0;
+        color: #575761;
+        background-color: #b8d4d3;
         &:not(:last-child) {
             margin-right: 1em;
+            background-color: #eca398;
         }
         &:first-child {
             margin-right: auto;
+            background-color: #d1e4ce;
         }
+    }
+    button:hover {
+        padding: 1em;
     }
 }
 
@@ -83,13 +84,20 @@ textarea,
 select,
 button,
 .btn {
-    padding: 1em;
     border: 1px solid $grey;
+    padding: 0.5em;
+    box-shadow: -2px 2px 2px 2px lightgrey;
     border-radius: 0;
     margin-bottom: 1em;
     font: inherit;
     color: inherit;
     background-color: transparent;
+    max-width: fit-content;
+}
+
+button:hover {
+    padding: 1em;
+    font-weight: 500;
 }
 
 textarea {
@@ -99,4 +107,140 @@ textarea {
 
 label {
     margin-bottom: 0.5em;
+}
+
+#welcome {
+    background-image: url('/flashcards2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 5em;
+    h1 {
+        font-size: 6em;
+    }
+    p {
+        display: flex;
+        font-size: 2.3em;
+        color: $darkGrey;
+    }
+    img {
+        margin-left: 15em;
+    }
+    button {
+        background-color: #ebc379;
+        color: #aa4535;
+    }
+}
+
+#browse {
+    background-color: rgb(247, 241, 234);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h2 {
+        margin: 1em;
+        font-size: 3em;
+        color: #404047;
+    }
+    div {
+        display: flex;
+        form {
+            margin-left: 3em;
+            select {
+                background-color: whitesmoke;
+            }
+            button {
+                background-color: #8acb88;
+                color: whitesmoke;
+                font-weight: 500;
+            }
+        }
+    }
+    h4 {
+        color: #404047;
+        font-size: 2em;
+        margin-bottom: 0;
+    }
+    #displayFlashcards {
+        display: flex;
+    }
+}
+
+.card {
+    width: fit-content;
+    max-width: 10em;
+    margin: 0.5em;
+    background-color: #f1cf90;
+    color: #575761;
+    a {
+        background-color: #aa4535;
+        color: whitesmoke;
+        padding: 0.2em;
+    }
+}
+
+#single {
+    max-width: 65em;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    #editButtons {
+        display: flex;
+        justify-content: flex-start;
+        margin-top: 1em;
+        background-color: #575761;
+        padding: 0.5em;
+        button {
+            background-color: rgb(234, 243, 247);
+            max-width: none;
+            margin: 0.3em 0.5em;
+            padding: 0.1em;
+            box-shadow: -2px 2px 2px 2px rgb(26, 25, 25);
+        }
+    }
+    #comments {
+        display: flex;
+        flex-direction: column;
+        background-color: #575761;
+        padding: 0.5em;
+        button,
+        input {
+            background-color: rgb(234, 243, 247);
+            max-width: none;
+            margin: 0.3em 0.5em;
+            padding: 0.1em;
+            box-shadow: -2px 2px 2px 2px rgb(26, 25, 25);
+        }
+        ul {
+            background-color: rgb(234, 243, 247);
+            padding: 1em;
+            margin: 1em;
+            li {
+                list-style-type: none;
+            }
+        }
+    }
+}
+
+.cardDisplay {
+    background-color: rgb(247, 241, 234);
+    display: flex;
+    box-shadow: -2px 2px 2px 2px lightgrey;
+    padding: 2em;
+    justify-content: space-around;
+    h1 {
+        color: #404047;
+    }
+    label {
+        background-color: #f1cf90;
+        padding: 0.3em;
+    }
+    button {
+        background-color: #8acb88;
+        color: #f1f7f0;
+        font-weight: 500;
+    }
+    h4 {
+        color: #404047;
+        font-size: 1.5em;
+    }
 }
