--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,11 +1,16 @@
 <div id="welcome">
     <h1 id="homeTitle">{{title}}</h1>
+   
 <p id="homeSubtitle">Welcome to {{title}}</p>
-</div>
+
 
 <div id="homeButtons">
+     <img src="/development.svg" alt="icon" height="120" width="120">
+
 <button><a href="/randomchoicecard">Random Choicecard</a></button>
 <button><a href="/browsechoicecards">Browse Choicecards</a></button>
 </div>
 
 
+
+</div>
