--- a/styles/style.scss
+++ b/styles/style.scss
@@ -244,3 +244,64 @@ label {
         font-size: 1.5em;
     }
 }
+
+#profileHeader {
+    background-color: rgb(247, 241, 234);
+    display: flex;
+    box-shadow: -2px 2px 2px 2px lightgrey;
+    padding: 2em;
+    justify-content: space-around;
+    color: #404047;
+    margin-top: 1em;
+    img {
+        max-width: 10em;
+        border-radius: 50px;
+    }
+    h1 {
+        font-size: 3em;
+    }
+    h4 {
+        background-color: #ebc379;
+        padding: 0.2em;
+        text-align: center;
+    }
+    p {
+        font-weight: 500;
+    }
+}
+
+#yourCards {
+    font-weight: 500;
+    background-color: #aa4535;
+    color: #f1f7f0;
+    max-width: fit-content;
+    padding: 0.3em;
+}
+
+#createdCards {
+    background-color: #648381;
+    display: flex;
+    box-shadow: -2px 2px 2px 2px lightgrey;
+    padding: 2em;
+    justify-content: space-around;
+    margin-top: 1em;
+    #singleCard {
+        width: fit-content;
+        max-width: 15em;
+        margin: 0.5em;
+        background-color: #f8e9cc;
+        color: #575761;
+        padding: 0 1em;
+        border: 1px solid whitesmoke;
+        box-shadow: -2px 2px 2px 2px rgb(78, 78, 78);
+        a {
+            font-weight: 500;
+            background-color: #aa4535;
+            color: whitesmoke;
+            padding: 0.2em;
+        }
+        a:hover {
+            padding: 0.5em 1em;
+        }
+    }
+}
