--- a/styles/style.scss
+++ b/styles/style.scss
@@ -264,9 +264,11 @@ label {
         background-color: #ebc379;
         padding: 0.2em;
         text-align: center;
+        letter-spacing: 3px;
     }
     p {
         font-weight: 500;
+        letter-spacing: 2px;
     }
 }
 
@@ -302,6 +304,73 @@ label {
         }
         a:hover {
             padding: 0.5em 1em;
+        }
+    }
+}
+
+#feedbackPage {
+    color: #404047;
+    h1 {
+        background-color: #ebc379;
+        margin-top: 1em;
+        padding: 0.6em;
+    }
+    h4 {
+        margin-left: 5em;
+        letter-spacing: 3px;
+    }
+    div {
+        display: flex;
+        #feedbackPageButtons {
+            margin-left: auto;
+            button {
+                max-width: none;
+                max-height: 3em;
+                padding: 0.6em;
+                margin: 0.2em;
+                background-color: #648381;
+                color: #b8d4d3;
+                font-weight: 500;
+            }
+        }
+    }
+}
+
+#createCard {
+    color: #404047;
+    h1 {
+        font-size: 3em;
+        background-color: #8acb88;
+        margin-bottom: 2em;
+    }
+    #left {
+        text-align: center;
+        label {
+            font-size: 1.3em;
+        }
+        #metaInput {
+            margin-top: 2em;
+            label {
+                font-size: 1em;
+            }
+            select {
+                padding: 0;
+                margin-left: 1em;
+            }
+        }
+    }
+    #left,
+    #right {
+        margin-top: 1.5em;
+        flex-grow: 1;
+        max-width: 40vw;
+        input {
+            padding: 0;
+            margin-left: 1em;
+        }
+        h5 {
+            font-size: 1.2em;
+            font-weight: 500;
         }
     }
 }
