--- a/views/choicecards/single.hbs
+++ b/views/choicecards/single.hbs
@@ -50,7 +50,7 @@
     {{#if user}}
     <form action="/choicecard/{{choicecard._id}}/upvote" method="POST"><button>Upvote!</button></form>
     <form action="/choicecard/{{choicecard._id}}/errorvote" method="POST"><button>Flag an Error!</button></form>
-    {{#if iscreator}}
+    {{#if isCreator}}
     <button><a href="/choicecard/{{choicecard._id}}/delete">Delete this flashcard</a></button>
     <button><a href="/choicecard/{{choicecard._id}}/update">Edit this flashcard</a></button>
     {{/if}}
