--- a/styles/style.scss
+++ b/styles/style.scss
@@ -315,9 +315,21 @@ label {
         margin-top: 1em;
         padding: 0.6em;
     }
-    h4 {
-        margin-left: 5em;
+    p {
         letter-spacing: 3px;
+        flex-grow: 1;
+        span {
+            font-weight: 500;
+            font-size: 1.1em;
+            background-color: #8acb88;
+            padding: 0.1em;
+        }
+    }
+    h4 {
+        margin-top: 0;
+        margin-left: 2em;
+        letter-spacing: 3px;
+        flex-grow: 1;
     }
     div {
         display: flex;
